@@ -19,7 +19,7 @@
 
 <p><strong>Specification:</strong> <a href="https://www.wiki.ed.ac.uk/display/ComputerSim/MOLDY+Information">MOLDY Wiki</a></p>
 
-<p><strong>Visualization programs:</strong> N/A</p>
+<p><strong>Visualization programs:</strong> none</p>
 
 
 <h4>Restrictions</h4>
