@@ -19,7 +19,7 @@
 
 <p><strong>Specification:</strong> <a href="http://www.quantum-espresso.org/wp-content/uploads/Doc/INPUT_PW.html">Quantum Espresso documentation</a></p>
 
-<p><strong>Visualization programs:</strong> N/A</p>
+<p><strong>Visualization programs:</strong> none</p>
 
 
 <h4>Restrictions</h4>
