@@ -19,7 +19,7 @@
 
 <p><strong>Spécification :</strong> <a href="https://www.wiki.ed.ac.uk/display/ComputerSim/MOLDY+Information">Wiki de MOLDY</a></p>
 
-<p><strong>Programmes de visualisation :</strong> N/A</p>
+<p><strong>Programmes de visualisation :</strong> aucun</p>
 
 
 <h4>Restrictions</h4>
