@@ -19,7 +19,7 @@
 
 <p><strong>Spécification :</strong> <a href="http://www.quantum-espresso.org/wp-content/uploads/Doc/INPUT_PW.html">documentation de Quantum Espresso</a></p>
 
-<p><strong>Programmes de visualisation :</strong> N/A</p>
+<p><strong>Programmes de visualisation :</strong> aucun</p>
 
 
 <h4>Restrictions</h4>
